# code-that-fits-in-your-head

./: .pre-commit-config.yaml  README.md  pyproject.toml
Restaurant/: .editorconfig  Build.sln  LICENCE  README.md  Restaurant.sln  build.sh
Restaurant/Restaurant.RestApi/: AccessControlList.cs  AddGuidColumnToReservations.sql  AddTenantColumnToReservations.sql  CalendarController.cs  CalendarDto.cs  Day.cs  DayDto.cs  DtoConversions.cs  Email.cs  EmailingReservationsRepository.cs  Grandfather.cs  HomeController.cs  HomeDto.cs  Hypertext.cs  IClock.cs  IPeriod.cs  IPeriodVisitor.cs  IPostOffice.cs  Month.cs  (+41 more)
Restaurant/Restaurant.RestApi.SqlIntegrationTests/: ConcurrencyTests.cs  ConnectionStrings.cs  Content.cs  ReservationDtoBuilder.cs  Restaurant.RestApi.SqlIntegrationTests.csproj  RestaurantService.cs  SqlReservationsRepositoryTests.cs  UseDatabaseAttribute.cs
Restaurant/Restaurant.RestApi.Tests/: CalendarTests.cs  Content.cs  Create.cs  EmailingReservationsRepositoryTests.cs  FakeDatabase.cs  Gens.cs  Grandfather.cs  HomeTests.cs  JwtTokenGenerator.cs  LegacyApi.cs  MaitreDScheduleTests.cs  MaitreDSegmentTests.cs  MaitreDTests.cs  ReservationDtoComparer.cs  ReservationEnvy.cs  ReservationTests.cs  ReservationsTests.cs  Restaurant.RestApi.Tests.csproj  RestaurantApiClient.cs  RestaurantTests.cs  ScheduleTests.cs  SelfHostedApi.cs  SmtpOptionsTests.cs  Some.cs  SpyPostOffice.cs  TimeDsl.cs  TimeDtoComparer.cs  TimeOfDayTests.cs  UrlBuilderTests.cs
chapter_2/: Makefile  hello_world.py  test_hello_world.py
chapter_4/: README.md  hello_world.py  test_hello_world.py
(+5 files in other folders)
